# assevra

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: eval-gate.yml  pages.yml
assevra/: __init__.py  __main__.py  attest.py  bootstrap.py  calibration.py  cli.py  history.py  judge.py  reliability.py  scorecard.py  signing.py
assevra/scorers/: __init__.py  grounding.py  pii.py  safety.py  task_completion.py
datasets/: golden.jsonl
docs/: example-scorecard.html  index.html
examples/: ci-gate.yml  sample-scorecard.md
tests/: test_attest.py  test_bootstrap.py  test_calibration.py  test_history.py  test_panel.py  test_pii.py  test_reliability.py  test_signing.py
web/: .gitignore  .prettierignore  astro.config.mjs  eslint.config.js  package-lock.json  package.json  tsconfig.json
web/public/: CNAME  example-scorecard.html  robots.txt
web/src/layouts/: BaseLayout.astro
web/src/pages/: index.astro
web/src/styles/: global.css
