[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assevra"
version = "0.1.0"
description = "A reference implementation and methodology for measuring the reliability of LLM agents (the Assevra Reliability Scorecard)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Veera Ravindra Divi" }]
keywords = [
    "llm",
    "ai-agents",
    "reliability",
    "evaluation",
    "llm-as-judge",
    "grounding",
    "pii",
    "safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The core (task-completion scorer, PII regex fallback, scorecard, CLI) has no
# third-party dependencies. Optional extras below add the full engines.
dependencies = []

[project.optional-dependencies]
pii = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7"]
judge = ["anthropic>=0.40"]
sign = ["cryptography>=41"]
all = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "anthropic>=0.40",
    "cryptography>=41",
]

[project.urls]
Homepage = "https://github.com/assevra/assevra"
Methodology = "https://github.com/assevra/assevra/blob/main/METHODOLOGY.md"

[project.scripts]
assevra = "assevra.cli:main"

[tool.setuptools]
packages = ["assevra", "assevra.scorers"]
